welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: reassignment to val
      vuBiscuit = true
                ^Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (pas <- 1 to 6) {
           ^