welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (pas <- 1 to 6) {
    avance()
    if (estSurBiscuit()) {
      vuBiscuit = true
    }
  }
}

val vuBiscuit:Boolean = false

